# llmbridge

./: CHANGELOG.md  CONTRIBUTING.md  DEV_SETUP.md  LLMBRIDGE_BUG_REPORT.md  README.md  pyproject.toml
com.jro/content/: _index.md
com.jro/content/open/: llmbridge.md
docs/: API.md  FEATURES.md  api-quick-reference.md  generating-model-jsons.md  integration-guide.md  model-management-guide.md  model-selection-usage-hints.md  pdf-file-handling.md  setup-guide.md  sqlite-support-proposal.md
examples/: base64_example.py  db_diagnostics.py  fastapi_app.py  file_processing_example.py  quick_start.py  refresh_models_async.py  shared_connection_example.py
scripts/: setup_database.py
src/llmbridge/: __init__.py  base.py  cli.py  database_backends.py  db.py  db_sqlite.py  db_v2.py  postgres_backend.py  schemas.py  service.py  service_sqlite.py  service_v2.py  sqlite_backend.py
src/llmbridge/api/: service.py
src/llmbridge/migrations/: 001_llm_schema.sql  002_usage_hints.sql  003_fix_division_by_zero.sql
src/llmbridge/model_refresh/: models.py
src/llmbridge/providers/: anthropic_api.py  google_api.py  ollama_api.py  openai_api.py
tests/: conftest.py  test_api.py  test_database.py  test_shared_connection.py  test_sqlite.py  test_sqlite_backend.py
tests/integration/: test_cli_sqlite.py  test_file_processing.py  test_model_database.py  test_service.py  test_simple_file_processing.py
tests/integration/test_providers/: test_anthropic.py  test_google.py  test_ollama.py  test_openai.py
tests/unit/: test_base.py  test_file_utils.py  test_service_models.py  test_sqlite_refresh.py
tests/unit/test_providers/: test_anthropic.py  test_google.py  test_ollama.py  test_openai.py
